# nexus

./: .env.example  .gitignore  .pre-commit-config.yaml  IDP_DEVELOPMENT_PLAN.md  Makefile  azure_nexus_platform.md  docker-compose.yml  temp.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/clients/: cosmos_gremlin.py  key_vault.py  redis_client.py
backend/app/core/: deps.py  exceptions.py  pagination.py  security.py
backend/app/middleware/: correlation_id.py  logging.py
backend/app/modules/actions/: models.py  parser.py  repository.py  router.py  seeds.py  service.py
backend/app/modules/auth/: router.py
backend/app/modules/catalog/: models.py  repository.py  router.py  service.py
backend/app/modules/entities/: models.py  repository.py  router.py  service.py
backend/app/modules/health/: router.py
backend/app/modules/ingestion/: catalog_parser.py  models.py  router.py  tasks.py
backend/app/modules/ops/: __init__.py  models.py  router.py  service.py
backend/app/modules/relationships/: models.py  repository.py  router.py
backend/app/modules/scorecards/: __init__.py  evaluator.py  models.py  router.py  service.py  templates.py
backend/app/modules/search/: models.py  router.py  service.py
backend/app/modules/userstate/: models.py  router.py  service.py
backend/app/workers/: celery_app.py
backend/tests/integration/: test_health.py
backend/tests/unit/: test_catalog_parser.py  test_exceptions.py  test_pagination.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
infra/: main.bicep
(+56 files in other folders)
